--- a/Makefile.in
+++ b/Makefile.in
@@ -104,6 +104,7 @@ HDRS = \
 	SDL_opengles2_gl2platform.h \
 	SDL_opengles2.h \
 	SDL_opengles2_khrplatform.h \
+	SDL_pen.h \
 	SDL_pixels.h \
 	SDL_platform.h \
 	SDL_power.h \
