Completed addition of new features

--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -126,7 +126,7 @@ testautomation$(EXE): $(srcdir)/testautomation.c \
 		      $(srcdir)/testautomation_timer.c \
 		      $(srcdir)/testautomation_video.c \
 		      $(srcdir)/testautomation_hints.c
-	$(CC) -o $@ $^ $(CFLAGS) @LIBS_STATIC@ ${LIBS}
+	$(CC) -o $@ $^ $(CFLAGS) ${LIBS}
 
 testmultiaudio$(EXE): $(srcdir)/testmultiaudio.c
 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
