--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -56,6 +56,7 @@ TARGETS = \
 	testmultiaudio$(EXE) \
 	testnative$(EXE) \
 	testoverlay2$(EXE) \
+	testpen$(EXE) \
 	testplatform$(EXE) \
 	testpower$(EXE) \
 	testqsort$(EXE) \
@@ -140,6 +141,7 @@ testautomation$(EXE): $(srcdir)/testautomation.c \
 		      $(srcdir)/testautomation_keyboard.c \
 		      $(srcdir)/testautomation_main.c \
 		      $(srcdir)/testautomation_mouse.c \
+		      $(srcdir)/testautomation_pen.c \
 		      $(srcdir)/testautomation_pixels.c \
 		      $(srcdir)/testautomation_platform.c \
 		      $(srcdir)/testautomation_rect.c \
@@ -152,7 +154,7 @@ testautomation$(EXE): $(srcdir)/testautomation.c \
 		      $(srcdir)/testautomation_timer.c \
 		      $(srcdir)/testautomation_video.c \
 		      $(srcdir)/testautomation_hints.c
-	$(CC) -o $@ $^ $(CFLAGS) $(LIBS) 
+	$(CC) -o $@ $^ $(CFLAGS) ${LIBS}
 
 testmultiaudio$(EXE): $(srcdir)/testmultiaudio.c $(srcdir)/testutils.c
 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
@@ -201,7 +203,7 @@ testgeometry$(EXE): $(srcdir)/testgeometry.c $(srcdir)/testutils.c
 
 testgesture$(EXE): $(srcdir)/testgesture.c
 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS) @MATHLIB@
- 
+
 testgl2$(EXE): $(srcdir)/testgl2.c
 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS) @MATHLIB@
 
@@ -285,6 +287,9 @@ endif
 
 testoverlay2$(EXE): $(srcdir)/testoverlay2.c $(srcdir)/testyuv_cvt.c $(srcdir)/testutils.c
 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
+
+testpen$(EXE): $(srcdir)/testpen.c
+	$(CC) -o $@ $^ $(CFLAGS) $(LIBS) @MATHLIB@
 
 testplatform$(EXE): $(srcdir)/testplatform.c
 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
